[package]
name = "clokew"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
gpui = "0.2.2"
gpui-component = "0.5.0"
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
