[package]
name = "clokew"
version = "0.1.1"
edition = "2021"

[package.metadata.bundle]
name = "clokew"
identifier = "one.nxeu.clokew"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png"]
version = "0.1.1"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
gpui = "0.2.2"
gpui-component = "0.5.0"
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
